# incomplete-gamma-kernels

./: .gitignore  LICENSE  MANIFEST.in  README.md  noxfile.py  pyproject.toml
examples/: clop_params.py  kernel_approximation.py  kernel_density_estimate.py  lp_denoising.py  regularity.py
src/incomplete_gamma_kernels/: __init__.py  kernels.py
src/incomplete_gamma_kernels/_C/: CMakeLists.txt
src/incomplete_gamma_kernels/_C/include/igk/: arange_iterator.h  batch_transform_reduce.cuh  cuda_utils.h  density_weights.h  dispatch.h  indexing.h  kernels.h  lop.h  math.h  mean_shift.h  regularity.h
src/incomplete_gamma_kernels/_C/include/igk/sparse/: gram.h
src/incomplete_gamma_kernels/_C/include/igk/sparse/linalg/: cg.h
src/incomplete_gamma_kernels/_C/python/: bindings.cpp
src/incomplete_gamma_kernels/_C/src/: density_weights.cpp  density_weights_cuda.cu  lop.cpp  lop_cuda.cu  mean_shift.cpp  mean_shift_cuda.cu  regularity.cpp  regularity_cuda.cu
src/incomplete_gamma_kernels/_C/src/sparse/: gram.cpp  gram_cuda.cu
src/incomplete_gamma_kernels/_C/src/sparse/linalg/: cg.cpp  cg_cuda.cpp
src/incomplete_gamma_kernels/sparse/: __init__.py
src/incomplete_gamma_kernels/sparse/linalg/: __init__.py
tests/: test_density_weights.py  test_kernels.py  test_lop.py  test_mean_shift.py  test_regularity.py
tests/sparse/: test_gram.py
tests/sparse/linalg/: test_cg.py
